--- a/index.html
+++ b/index.html
@@ -23,25 +23,64 @@
 </head> 
 
 <body>
-<div id="cover" style="display: table; position: absolute; top: 0px; z-index: 1; width: 100%; height: 100%;">
 <a href="http://www.ethz.ch/en.html" target="_blank" id="ethz"><img src="https://www.ethz.ch/img/header/eth_logo.png"></a>
 
 <section class="content" id="intro">
 <div class="cell">
-    <div id="bind">Bind.</div>
-    <div class="how" id="part0">
+    <div id="bind">bind</div>
+    <div id="more">What keywords?</div>
+    <div class="how">
         <div class="title">
             <div id="motto">
-            One <a href="https://raw.githubusercontent.com/akosenkov/bind/master/bind.hpp" download="bind.hpp">header</a>, three keywords &ndash;
-            <span class="link">:cpu</span>,
-            <span class="link">:gpu</span> and
-            <span class="link">:node</span>.
+            Prototype multi-node CPU/GPU applications fast.<br>
+            One <a href="https://raw.githubusercontent.com/akosenkov/bind/master/bind.hpp" download="bind.hpp">header</a>, three keywords.
+            </div>
+        </div>
+    </div>
+</div>
+</section>
+<section class="content" style="background-color: rgb(255,200,100);">
+<div class="cell">
+    <div class="keyword">node</div>
+    <div class="how">
+        <div class="title">
+            <div id="motto">
+            Bind execution scope to selected node.<br>
+            { bind::node first(0); throw_coin(c); }
+            </div>
+        </div>
+    </div>
+</div>
+</section>
+<section class="content" style="background-color: rgb(50,93,97);">
+<div class="cell">
+    <div class="keyword">cpu</div>
+    <div class="how">
+        <div class="title">
+            <div id="motto">
+            Implicitely transfer args and bind the call to node's CPU.<br>
+            bind::cpu(sort, a.begin(), a.end());
+            </div>
+        </div>
+    </div>
+</div>
+</section>
+<section class="content" style="background-color: rgb(39,205,120);">
+<div class="cell">
+    <div class="keyword">gpu</div>
+    <div class="how">
+        <div class="title">
+            <div id="motto">
+            Implicitely transfer args and bind the call to node's CUDA device.<br>
+            <center><p style="display: block; width: intrinsic; text-align: left; color: white; font: inherit;">
+            bind::gpu([factor](bind::array&lt;float&gt;& a){<br>
+                launch_scale_kernel(a.data(), factor);<br>
+            }, a);</p></center>
             </div>
         </div>
     </div>
 </div>
 </section>
 
-</div>
 </body> 
 </html>
