--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="title">
             <div id="motto">
             Prototype multi-node CPU/GPU applications fast.<br>
-            One <a href="https://raw.githubusercontent.com/akosenkov/bind/master/bind.hpp" download="bind.hpp">header</a>, three keywords.
+            <center><p>One <a href="https://raw.githubusercontent.com/akosenkov/bind/master/bind.hpp" download="bind.hpp">header</a>, three keywords.</p></center>
             </div>
         </div>
     </div>
