adding whitepaper link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </div>
 </section>
 <section id="footer">
-    <!--div class="link">Read the <a id="github" href="https://github.com/akosenkov/bind/tree/master/examples">whitepaper</a></div-->
+    <div class="link">Read the <a id="github" href="http://arxiv.org/abs/1606.04830">white paper</a></div>
     <div class="link">Check <a id="github" href="https://github.com/akosenkov/bind/tree/master/examples">examples</a> on GitHub</div>
 </section>
 
